# inventory-project

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Contributing.md  Makefile  README.md  a.out  accounts.csv  clang-format  cmake_install.cmake  example.csv  inventory-manager.pro  inventory-manager.pro.autosave  inventory-manager.pro.user.cd687a7  license.txt  main  main.cpp  mainwindow.ui  output.csv  test_child_sales.csv  test_parent_sales.csv
.github/workflows/: ci.yml  cpp-linter.yml
.qt/: QtDeploySupport.cmake
CSV Input/: all_bad.csv  alternate.csv  bad.csv  bad_dates.csv  bad_test.csv  big_file.csv  test.csv
CSVInput/: Jon_Test.csv  Jon_Test_child_sales.csv  Jon_Test_parent_sales.csv  alternate.csv  backorder_test.csv  bad.csv  bad_dates.csv  bad_test.csv  badquantityid_backorder_test.csv  badsaleprice_backorder_test.csv  big_file.csv  big_test.csv  big_test_child_sales.csv  big_test_parent_sales.csv  good_inventory.csv  good_inventory_child_sales.csv  good_inventory_parent_sales.csv  inventory_list.csv  little_file.csv  medium_file.csv  medium_file_child_sales.csv  medium_file_parent_sales.csv  noah_test.csv  noah_test_child_sales.csv  noah_test_parent_sales.csv
include/: ActiveInventory.hpp  AddDialog.hpp  CSVEntry.hpp  CSVGenerator.hpp  CSVReader.hpp  Date.hpp  HelperFunctions.hpp  InventoryGenerator.hpp  InventoryManager.hpp  InventoryRandomizer.hpp  InventoryScreen.hpp  Item.hpp  Logger.hpp  Login.hpp  LoginScreen.hpp  NonPerishableItem.hpp  PerishableItem.hpp  SaleGenerator.hpp  Sales.hpp  SalesComparison.hpp  SalesGenerator.hpp  SalesTEST.cpp  TransactionDialog.hpp  User.hpp  loginscreen.hpp  mainwindow.hpp
junk/: SalesTEST.cpp  junk.txt  thoughts.txt
main_autogen/: moc_predefs.h
main_autogen/include/: ui_loginscreen.h
randomize-inventory_autogen/: moc_predefs.h
src/: ActiveInventory.cpp  AddDialog.cpp  CSVEntry.cpp  CSVGenerator.cpp  CSVGeneratorDriver.cpp  CSVReader.cpp  Date.cpp  HelperFunctions.cpp  InventoryGenerator.cpp  InventoryGeneratorDriver.cpp  InventoryManager.cpp  InventoryRandomizer.cpp  InventoryRandomizerMain.cpp  InventoryScreen.cpp  Item.cpp  Login.cpp  LoginScreen.cpp  NonPerishableItem.cpp  PerishableItem.cpp  Sales.cpp  SalesComparison.cpp  SalesGenerator.cpp  SalesGeneratorDriver.cpp  TransactionDialog.cpp  User.cpp  loginscreen.cpp  loginscreen.ui  main.cpp  mainwindow.cpp  unit_tests.cpp
tests/: ActiveInventory_unit_tests.cpp  Date_unit_tests.cpp  HelperFunctions_unit_tests.cpp  InventoryManager_unit_tests.cpp  Logger_unit_tests.cpp  Login_unit_tests.cpp  NonPerishableItem_unit_tests.cpp  PerishableItem_unit_tests.cpp  Sales_unit_tests.cpp
